@@ -39,7 +39,7 @@ public class EvasionPrefixes implements ISlashRegistryInit {
             .tier(1, new StatModifier(25F, 50F, DodgeRating.getInstance(), ModType.LOCAL_INCREASE))
             .tier(2, new StatModifier(20F, 25F, DodgeRating.getInstance(), ModType.LOCAL_INCREASE))
             .tier(3, new StatModifier(10, 20F, DodgeRating.getInstance(), ModType.LOCAL_INCREASE))
-            .tier(3, new StatModifier(5, 10, DodgeRating.getInstance(), ModType.LOCAL_INCREASE))
+            .tier(4, new StatModifier(5, 10, DodgeRating.getInstance(), ModType.LOCAL_INCREASE))
             .Req(SlotRequirement.hasBaseStat(DodgeRating.getInstance()))
             .Prefix()
             .Build();
