@@ -5,6 +5,7 @@ import com.robertx22.mine_and_slash.database.affixes.AffixBuilder;
 import com.robertx22.mine_and_slash.database.affixes.ElementalAffixBuilder;
 import com.robertx22.mine_and_slash.database.gearitemslots.bases.BaseGearType;
 import com.robertx22.mine_and_slash.database.requirements.SlotRequirement;
+import com.robertx22.mine_and_slash.database.stats.types.generated.ChanceToApplyEffect;
 import com.robertx22.mine_and_slash.database.stats.types.generated.WeaponDamage;
 import com.robertx22.mine_and_slash.registry.ISlashRegistryInit;
 import com.robertx22.mine_and_slash.uncommon.enumclasses.Elements;
@@ -43,12 +44,53 @@ public class WeaponPrefixes implements ISlashRegistryInit {
         AffixBuilder.Normal("tyrannical")
             .Named("Tyrannical")
             .tier(1, new StatModifier(0.3F, 2.5F, 0.5F, 3F, new WeaponDamage(Elements.Physical), ModType.FLAT))
-            .tier(1, new StatModifier(0.2F, 1F, 0.3F, 2F, new WeaponDamage(Elements.Physical), ModType.FLAT))
-            .tier(1, new StatModifier(0.1F, 0.5F, 0.5F, 1.2F, new WeaponDamage(Elements.Physical), ModType.FLAT))
+            .tier(2, new StatModifier(0.2F, 1F, 0.3F, 2F, new WeaponDamage(Elements.Physical), ModType.FLAT))
+            .tier(3, new StatModifier(0.1F, 0.5F, 0.5F, 1.2F, new WeaponDamage(Elements.Physical), ModType.FLAT))
             .Req(SlotRequirement.of(BaseGearType.SlotFamily.Weapon))
             .Prefix()
             .Build();
 
+        ///// chance of effect
+        AffixBuilder.Normal("snakes")
+            .Named("Snake's")
+            .tier(1, new StatModifier(10, 50, ChanceToApplyEffect.POISON, ModType.FLAT))
+            .tier(2, new StatModifier(8, 10, ChanceToApplyEffect.POISON, ModType.FLAT))
+            .tier(3, new StatModifier(5, 8, ChanceToApplyEffect.POISON, ModType.FLAT))
+            .Req(SlotRequirement.of(BaseGearType.SlotFamily.Weapon))
+            .Weight(50)
+            .Prefix()
+            .Build();
+
+        AffixBuilder.Normal("yetis")
+            .Named("Yeti's")
+            .tier(1, new StatModifier(10, 15, ChanceToApplyEffect.CHILL, ModType.FLAT))
+            .tier(2, new StatModifier(8, 10, ChanceToApplyEffect.CHILL, ModType.FLAT))
+            .tier(3, new StatModifier(5, 8, ChanceToApplyEffect.CHILL, ModType.FLAT))
+            .Req(SlotRequirement.of(BaseGearType.SlotFamily.Weapon))
+            .Weight(50)
+            .Prefix()
+            .Build();
+
+        AffixBuilder.Normal("drakes")
+            .Named("Drakes's")
+            .tier(1, new StatModifier(10, 15, ChanceToApplyEffect.BURN, ModType.FLAT))
+            .tier(2, new StatModifier(8, 10, ChanceToApplyEffect.BURN, ModType.FLAT))
+            .tier(3, new StatModifier(5, 8, ChanceToApplyEffect.BURN, ModType.FLAT))
+            .Req(SlotRequirement.of(BaseGearType.SlotFamily.Weapon))
+            .Weight(50)
+            .Prefix()
+            .Build();
+
+        AffixBuilder.Normal("valkyrie")
+            .Named("Valkyrie's")
+            .tier(1, new StatModifier(10, 15, ChanceToApplyEffect.STATIC, ModType.FLAT))
+            .tier(2, new StatModifier(8, 10, ChanceToApplyEffect.STATIC, ModType.FLAT))
+            .tier(3, new StatModifier(5, 8, ChanceToApplyEffect.STATIC, ModType.FLAT))
+            .Req(SlotRequirement.of(BaseGearType.SlotFamily.Weapon))
+            .Weight(50)
+            .Prefix()
+            .Build();
+        ///// chance of effect
     }
 
 }
