@@ -92,6 +92,7 @@
 	"mmorpg.affix.agile": "Agile",
 	"mmorpg.affix.azure": "Azure",
 	"mmorpg.affix.cruel": "Cruel",
+	"mmorpg.affix.drakes": "Drakes's",
 	"mmorpg.affix.fawns": "Fawn's",
 	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
 	"mmorpg.affix.fire_res": "Of the Drake",
@@ -123,16 +124,19 @@
 	"mmorpg.affix.scaled": "Scaled",
 	"mmorpg.affix.seraphim": "Seraphim's",
 	"mmorpg.affix.shades": "Shade's",
+	"mmorpg.affix.snakes": "Snake's",
 	"mmorpg.affix.thunder_ele_dmg_jewelry": "Of Electricity",
-	"mmorpg.affix.thunder_res": "Of the Tempest",
+	"mmorpg.affix.thunder_res": "Of the Valkyrie",
 	"mmorpg.affix.thunder_wep_dmg": "Sparkling",
 	"mmorpg.affix.thunder_wep_dmg_jewelry": "Shocking",
 	"mmorpg.affix.tyrannical": "Tyrannical",
+	"mmorpg.affix.valkyrie": "Valkyrie's",
 	"mmorpg.affix.virile": "Virile",
 	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
 	"mmorpg.affix.water_res": "Of the Yeti",
 	"mmorpg.affix.water_wep_dmg": "Chilled",
 	"mmorpg.affix.water_wep_dmg_jewelry": "Freezing",
+	"mmorpg.affix.yetis": "Yeti's",
 
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
 
@@ -440,6 +444,10 @@
 	"mmorpg.stat.bow_damage": "Bow Damage",
 	"mmorpg.stat.burn_bonus_dmg": "Damage to Burning Enemies",
 	"mmorpg.stat.cdr": "Cooldown Reduction",
+	"mmorpg.stat.chance_of_burn": "Chance to Apply Burn",
+	"mmorpg.stat.chance_of_frost": "Chance to Apply Chill",
+	"mmorpg.stat.chance_of_poison": "Chance to Apply Poison",
+	"mmorpg.stat.chance_of_static": "Chance to Apply Static",
 	"mmorpg.stat.critical_damage": "Critical Damage",
 	"mmorpg.stat.critical_hit": "Critical Strike Chance",
 	"mmorpg.stat.crossbow_damage": "CrossBow Damage",
@@ -688,6 +696,10 @@
 	"mmorpg.stat_desc.attack_speed": "Lowers cooldown of melee attacks.",
 	"mmorpg.stat_desc.burn_bonus_dmg": "Increases dmg if enemy is affected by: Burn",
 	"mmorpg.stat_desc.cdr": "Reduces spell cooldown.",
+	"mmorpg.stat_desc.chance_of_burn": "Chance to apply effect on basic weapon hits.",
+	"mmorpg.stat_desc.chance_of_frost": "Chance to apply effect on basic weapon hits.",
+	"mmorpg.stat_desc.chance_of_poison": "Chance to apply effect on basic weapon hits.",
+	"mmorpg.stat_desc.chance_of_static": "Chance to apply effect on basic weapon hits.",
 	"mmorpg.stat_desc.critical_damage": "If Critical, multiply by x",
 	"mmorpg.stat_desc.critical_hit": "Chance to multiply damage by critical damage",
 	"mmorpg.stat_desc.damage_shield": "Decreases that amount of damage from every attack.",
